allow speak speed change

--- a/and-bible/app/src/main/res/xml/settings.xml
+++ b/and-bible/app/src/main/res/xml/settings.xml
@@ -91,10 +91,9 @@
 				android:entries="@array/prefs_interface_locale_descriptions"
 				android:entryValues="@array/prefs_interface_locale_values"
 				android:defaultValue=""/>
-	<net.bible.android.view.util.SpeakSpeedPreference android:key="speak_speed_pref"
+	<net.bible.android.view.util.SpeakSpeedPreference android:key="speak_speed_percent_pref"
 													android:title="@string/prefs_speak_speed_title"
 													android:summary="@string/prefs_speak_speed_summary"
-													android:defaultValue="1"
-													android:max="2"/>
-
+													android:defaultValue="100"
+													android:max="150"/>
 </PreferenceScreen>
