--- a/and-bible/app/src/main/res/menu/link_context_menu.xml
+++ b/and-bible/app/src/main/res/menu/link_context_menu.xml
@@ -3,6 +3,9 @@
 	<item android:id="@+id/open_link_in_this_window"
 		  android:title="@string/open_link_in_this_window"
 		  />
+	<item android:id="@+id/open_link_in_main_window"
+		  android:title="@string/open_link_in_main_window"
+		  />
 	<item android:id="@+id/open_link_in_new_window"
 		  android:title="@string/open_link_in_new_window"
 		  />
