--- a/and-bible/app/src/main/res/layout/activity_install_zip.xml
+++ b/and-bible/app/src/main/res/layout/activity_install_zip.xml
@@ -4,6 +4,15 @@
     android:layout_height="match_parent"
     tools:context="${relativePackage}.${activityClass}" >
 
+    <TextView
+            android:text="@string/install_zip_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="26dp"
+            android:id="@+id/installZipLabel"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
@@ -14,5 +23,4 @@
         android:layout_marginTop="63dp"
         android:max="10000"
         android:progress="0" />
-
 </RelativeLayout>
