Serialize & save speech settings

--- a/and-bible/app/src/main/res/layout/speak_bible.xml
+++ b/and-bible/app/src/main/res/layout/speak_bible.xml
@@ -23,7 +23,8 @@
 				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:layout_weight="1"
-				android:id="@+id/synchronize"/>
+				android:id="@+id/synchronize"
+                android:onClick="onSettingsChange"/>
 
 		<LinearLayout android:id="@+id/rightPanel"
 					  android:layout_height="wrap_content"
