--- a/and-bible/app/src/main/res/layout/speak_bible.xml
+++ b/and-bible/app/src/main/res/layout/speak_bible.xml
@@ -42,6 +42,7 @@
 					  android:padding="5dip">
 
 		</LinearLayout>
+
 	</LinearLayout>
 
 
@@ -111,5 +112,26 @@
 			android:id="@+id/statusText"
 			android:layout_alignParentEnd="true"
 			android:text="*Gen.1.1*"/>
+
+	<SeekBar
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_below="@+id/statusText"
+			android:layout_alignParentStart="true"
+			android:id="@+id/speakSpeed"
+			android:layout_alignParentEnd="true"
+			android:max="200"
+			android:progress="100"
+			/>
+
+	<TextView
+			android:text="SPEED"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_below="@+id/speakSpeed"
+			android:layout_alignParentStart="true"
+			android:id="@+id/speedStatus"
+			android:layout_alignParentEnd="true"/>
+
 
 </RelativeLayout>
